Add logging configuration with command line argument support (#91)